Fix position-fixed workaround for older devices in overlays
Could be observed in the editor. The bottom bar would stay in the middle
of the page.

It also fixes the overlays on iPhone 3G (the overlay was not covering
the web site below it) and almost fixes the position: fixed fallback on
this phone (it didn't work, now it does, although the bottom bar does not
stick to the bottom, but almost to the bottom).

--- a/less/common/notifications.less
+++ b/less/common/notifications.less
@@ -41,12 +41,16 @@
 		 * an estimate; it doesn't have to be exact because it's used only for
 		 * the sliding animation, not for hiding the drawer */
 		.transform( translate3d(0, 100px, 0) );
+		// counter translate3d with bottom to avoid empty blank space at the bottom
+		// especially on browsers that don't support position: fixed
+		bottom: 100px;
 		opacity: 0;
 		// delay visibility transition to make other transitions visible
 		// http://fvsch.com/code/transition-fade/test5.html
-		.transition( transform @duration, opacity @duration, visibility 0s @duration );
+		.transition( transform @duration, opacity @duration, visibility 0s @duration, bottom 0s @duration );
 
 		&.visible {
+			bottom: 0;
 			.transition( transform @duration, opacity @duration );
 			visibility: visible;
 			opacity: 1;
